kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boxed-db
spec:
  type: ClusterIP
  selector:
    app: boxed-db
  ports:
    - port: 5432
      targetPort: 5432
