kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boxed-web
spec:
  type: ClusterIP
  selector:
    app: boxed-web
  ports:
    - port: 80
      targetPort: 3000
